# conmech

./: .appveyor.yml  .bumpversion.cfg  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  MANIFEST.in  README.md  README.rst  doc_conda_env.yml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py  setup_cmake_utils.py  tasks.py  tox.ini
ext/: CMakeLists.txt  setup.cfg
src/bindings/pyconmech/: CMakeLists.txt  eigen_demo_py.cpp  pyconmech.cpp
src/bindings/pyconmech/eigen_demo/: eigen_demo_py.cpp
src/bindings/pyconmech/stiffness_checker/: stiffness_checker_py.cpp
src/bindings/pyconmech/stiffness_checker/test/: README.md  sf-test_3-frame.json  sf-test_4-frame.json  stiffness_checker_test.ipynb  stiffness_checker_test.py  test.py
src/bindings/pyconmech/test/: deformed_frame_viz.py  sf-test_4-frame.json  sf-test_result.json  stiffness_checker_test.ipynb  stiffness_checker_test.py  test.py  tower_3D-PLA.json  tower_3D.json
src/pyconmech_bindings/: CMakeLists.txt  pybind_stiffness_checker.cpp
src/stiffness_checker/: CMakeLists.txt  CoordTrans.cpp  CoordTrans.hpp  DualGraph.cpp  DualGraph.hpp  Frame.cpp  Frame.h  GCommon.h  GCommon.hpp  IllCondDetector.h  Material.cpp  Material.h  SharedConst.h  Statistics.hpp  Stiffness.cpp  Stiffness.h  Stiffness.hpp  StiffnessChecker.cpp  StiffnessChecker.h  StiffnessChecker.hpp  StiffnessIO.cpp  StiffnessIO.h  StiffnessIO.hpp  StiffnessParm.h  StiffnessParm.hpp  StiffnessShape.cpp  StiffnessSolver.cpp  StiffnessSolver.h  StiffnessSolver.hpp  Timer.cpp  Timer.h  Timer.hpp  Util.cpp  Util.h  WireFrame.cpp  WireFrame.hpp  stiffness_checker_py.cpp
src/stiffness_checker/bindings/: CMakeLists.txt  pybind_stiffness_checker.cpp
src/stiffness_checker/matlab/: conmech_stiffness_checker.m
src/stiffness_checker/matlab/analysis/: available_methods.m  displacementMethod.m  displacement_method.m  local_stiffness_matrix.m
src/stiffness_checker/matlab/test/: json_parse_test.m
src/stiffness_checker/matlab/test/GSA/: 4-beam.csv  tower_3D.gwb  tower_3D.gwb.lok
src/stiffness_checker/matlab/test/cm_results/: tower_3D_result.json  tower_3D_wpillar_result.json
src/stiffness_checker/matlab/test/karamba/: 2D_beam.gh  2D_frame.gh  2D_truss+frame.gh  4-bending.gh  cant_2_frame.gh  cant_2_frame_3D.gh  cant_beam_3D.gh  sf-3_frame.gh  topopt100_3D.gh  tower_3D.gh
src/stiffness_checker/matlab/test/problem_instances/: 2D_frame.json  2D_truss.json  2D_truss_ft.json  cant_2_3D_frame.json  cant_3D_beam.json  sf-test_2D_beam.json  sf-test_3-frame.json  sf-test_3-frame_0.json  sf-test_3-frame_load_case.json  topopt100_3D.json  tower_3D_load_case.json
src/stiffness_checker/matlab/utility/: cross_sec_properties.m  draw_cubic_bent_beam.m  draw_frame.m  local_frame.m  parse_frame_json.m  parse_load_json.m  plot_circle.m  plot_truss_archive.m  rot_axis.m  write_result_json.m
src/stiffness_checker/test/: conmech_cpp_test_result.json  sf-test_3-frame.json  sf-test_3-frame.json.plt  sf-test_4-frame.json  simple_frame.json  stiffness_checker_test.cpp  topopt-100_S1_03-14-2019_w_layer.json
src/stiffness_checker/test/validation/GSA/: 4-beam.gwb  tower_3D.gwb
src/stiffness_checker/test/validation/RISA3D/: 4-bending.r3d
src/stiffness_checker/test/validation/cm_results/: bending_4_result.json  tower_3D_result.json
src/stiffness_checker/test/validation/karamba/: 2D_beam.gh  2D_frame.gh  2D_truss+frame.gh  4-bending.gh  cant_beam_3D.gh  topopt100_3D.gh  tower_3D.gh
src/stiffness_checker/test/validation/problem_instances/: bending_4.json  bending_4_load_case.json  cant_2_3D_frame.json  cant_3D_beam.json  sf-test_2D_truss.json  sf-test_3-frame_0_1.json  sf-test_4-frame.json  (+4 more)
tests/: CMakeLists.txt  conftest.py  hello_catch.cpp  main.cpp  memory_check.cpp  stiffness_checker_test.py  test.py  test_compare_element_subdivision.py  test_parsing.py  test_stiffness_checker.py  topopt-100_S1_03-14-2019_w_layer.json
tests/compare-compas_fea/: abaqus-compare_frame.py
tests/compare_compas_fea/: __init__.py  compare_frame.py
tests/cpp/: CMakeLists.txt  hello_catch.cpp  main.cpp  test_common.h  test_io.cpp  test_memory_leak.cpp  utils.h
tests/gh_scripts/: gh_frame+load_case_generator.ghx  parse_frame_json.ghx  stiffness_checker_compare_karamba.ghx  stiffness_checker_compare_karamba_compas_rpc.ghx  stiffness_checker_compare_karamba_compas_rpc_play_around.ghx  stiffness_checker_compare_karamba_ghpythonremote-subdivision.ghx  stiffness_checker_compare_karamba_ghpythonremote.ghx  stiffness_checker_in_gh_python_remote.ghx  voronoi_analysis_res.json  voronoi_solution.json
tests/notebook_demo/: demo.ipynb
tests/python/: conftest.py  test_compare_element_subdivision.py  test_np_stiffness.py  test_parsing.py  test_stiffness_checker.py
tests/test_data/: 2D_truss.json  2D_truss_loads.json  bad_material_properties_model.json  bad_node_element_model.json  fertility.json  fertility_loads.json  four-frame.json  four-frame_loads.json  mgz_flat_beam.json  mgz_flat_beam_loads.json  simple_frame.json  simple_frame_loads.json  topopt-100.json  topopt-100_load_case.json  topopt-100_loads.json  tower_3D.json  tower_3D_broken_lines.json  tower_3D_broken_lines_loads.json  tower_3D_loads.json  uniform_load_analytical_check_model.json  uniform_load_analytical_model.json  uniform_load_analytical_model_load_case.json  uniform_load_analytical_model_loads.json
tests/test_data/old_data/: four-frame.json  topopt-100.json  tower_3D.json  tower_3D_broken_lines.json  tower_3D_broken_lines_load_case.json  tower_3D_load_case.json  uniform_load_analytical_model.json
tests/test_data/subdivided/: topopt100_subd_len0.002.json  topopt100_subd_len0.004.json  topopt100_subd_len0.006.json  topopt100_subd_len0.008.json  topopt100_subd_len0.01.json  topopt100_subd_len0.012.json  topopt100_subd_len0.014.json  topopt100_subd_len0.016.json  topopt100_subd_num0.json  topopt100_subd_num1.json  topopt100_subd_num2.json  topopt100_subd_num3.json  topopt100_subd_num4.json  topopt100_subd_num5.json  topopt100_subd_num6.json  topopt100_subd_num7.json
(+74 files in other folders)
